<resources>
    <string name="app_name">BookInventory</string>
    <string name="empty_view_title_text">No books added yet...</string>
    <string name="empty_view_subtitle_text">Get started by adding a book</string>
    <string name="action_insert_new_book">Add a new book</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="button_sale">Sale</string>
    <string name="hint_book_title">Title</string>
    <string name="hint_book_author">Author</string>
    <string name="hint_book_isbn">ISBN number</string>
    <string name="hint_book_price">Price</string>
    <string name="hint_book_quantity">Number of books in stock</string>
    <string name="editor_activity_title_new_book">Add a Book</string>
    <string name="editor_activity_title_edit_book">Edit Book</string>
    <string name="editor_insert_book_successful">Book saved</string>
    <string name="editor_insert_book_failed">Error with saving book</string>
    <string name="editor_update_book_successful">Book successfully updated</string>
    <string name="editor_update_book_failed">Error with updating book</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="delete_dialog_msg">Delete this book?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="editor_delete_book_successful">Book deleted</string>
    <string name="editor_delete_book_failed">Error with deleting book</string>
</resources>
