<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".EditorActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edit_book_title"
            style="@style/EditorFieldStyle"
            android:hint="@string/hint_book_title"
            android:inputType="textCapWords" />

        <EditText
            android:id="@+id/edit_book_author"
            style="@style/EditorFieldStyle"
            android:hint="@string/hint_book_author"
            android:inputType="textCapWords" />

        <EditText
            android:id="@+id/edit_book_isbn"
            style="@style/EditorFieldStyle"
            android:hint="@string/hint_book_isbn"
            android:inputType="textCapWords" />

        <EditText
            android:id="@+id/edit_book_price"
            style="@style/EditorFieldStyle"
            android:hint="@string/hint_book_price"
            android:inputType="textCapWords" />

        <EditText
            android:id="@+id/edit_book_quantity"
            style="@style/EditorFieldStyle"
            android:hint="@string/hint_book_quantity"
            android:inputType="textCapWords" />

    </LinearLayout>
</LinearLayout>